# pymaxed

./: .gitignore  README.md  pyproject.toml
demo/: maxed.ipynb
pymaxed/: __init__.py  lagrangian.py  maxed.py  minimize.py  optimizer.py  pdfs.py  tools.py  vectors.py
tests/: test_lagrangian.py  test_minimize.py  test_tools.py  test_vectors.py
