[tool.poetry]
name = "pymaxed"
version = "0.1.6"
description = "Python package for the maximum entroy distribution."
authors = ["Kyoungseoun Chung <kyoungseoun.chung@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyapes = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^2.21.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
